feat(unsafe): fix java un.misc.Unsafe